--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -23,9 +23,13 @@
         "subtitle": "实时 • 市场与物流",
         "live_data": "实时数据",
         "agricultural_commodities": "农产品大宗商品",
-        "soy": "大豆 (期货)",
-        "cbot_mar25": "CBOT • 3月25",
-        "corn": "玉米",
+        "soy": "大豆 (CBOT)",
+        "corn": "玉米 (B3)",
+        "ibovespa": "巴西指数 (B3)",
+        "sp500": "标准普尔 500",
+        "bitcoin": "比特币",
+        "boi": "肥牛",
+        "fertilizer": "肥料 (FOB)",
         "b3_spot": "B3 • 现货",
         "fx_macro": "外汇与宏观",
         "usd_brl": "美元 / 雷亚尔",
@@ -161,9 +165,9 @@
         "hero": {
             "label": "机构",
             "title": "历史与起源",
-            "description_intro": "2017年，各大洲之间的高层运营面临一个结构性风险：缺乏同时保护双方的机构支持。",
-            "description_context": "尖端技术在拉美农业综合企业中寻求规模。拉美生产者寻求数十亿美元的全球市场。双方都在九位数的固定资本、长周期和双边风险敞口下运作：技术可能到达却找不到采用；收成可能到达港口而买家退出。\n\n但风险不仅仅在于交易。即使操作成行，资本也往往在产生回报之前就已经老化。没有永久使用生态系统的技术变成了废墟。没有与终端市场整合的生产失去了相关性。\n\n传统的商业结构无法解决这个问题。咨询公司指出了路径却不承担风险。双边协议保证了交易却没能构建持久性。",
-            "description_solution": "CCTAAL在巴西利亚成立，旨在作为双边机构担保和持久性架构运作。在这个生态系统中，双方在同一国家背书下通过，受同一跨国政府网络保护，投资资本从技术采用整合到能够吸收体量且无破坏性波动的市场。\n\nCCTAAL团队在跨国机构运营方面积累了三十多年的经验。在Chang Yung Kong的管理下，与国家金融机构和多边组织构建了超过20亿美元的谈判，拥有包括麻省理工学院（MIT）和哈佛商学院（Harvard Business School）两项研究生学历的执行教育背景。\n\n自2017年以来，CCTAAL一直以这一巩固的机构基础运作。三大洲的政府网络。直接接触部长、州长和国家决策者。在机构屏蔽下跨越不同监管制度的运营。\n\nCCTAAL不指路。我们一起穿越。"
+            "description_intro": "2017年，各大洲之间的顶级运营面临着一种结构性风险：缺乏同时保护双方的机构支持。",
+            "description_context": "尖端技术在拉美农业综合企业中寻求规模化。拉美生产商寻求数十亿美元的全球市场。双方都以九位数的固定资本、长周期和双边风险进行运营：技术可能到来却找不到应用；收获可能到达港口而买家却退出。\n\n但在交易之外还有风险。即使业务得以实现，资本也经常在产生回报之前就老化了。没有永久使用生态系统的技术会变成废墟。没有与终端市场整合的生产会失去相关性。\n\n传统的商业结构无法解决这个问题。咨询公司指明了道路却不承担风险。双边协议保证了交易，却无法构建持久性。巴西商业环境的法律不安全性和监管复杂性仍然是大规模外国资本无法逾越的障碍。",
+            "description_solution": "CCTAAL 在巴西利亚成立，旨在作为一个双边机构担保和持久性架构运作。在这个生态系统中，双方在同一个国家支持下通过，受到同一个跨国政府网络的保护，投资资本从技术采用到吸收体量的市场都得到整合，没有破坏性的波动。\n\n该结构通过四个基本支柱运作：法律安全和冲突解决，确保合同得到遵守，争议得到迅速和技术性的解决；金融和运营风险缓解，通过托管账户和对冲等工具防止汇率和价格波动；质量保证和可追溯性，与 SGS 和 Intertek 合作确保 ESG 合规和原产地认证；以及市场促进和进入巴西，简化在中央银行的 RDE-IED（外国直接投资电子申报登记）和巴西监管环境的导航。\n\nCCTAAL 汇集了一支在经济外交、跨国业务结构设计以及与国家金融机构对接方面拥有三十多年积累经验的团队。在麻省理工学院 (MIT) 和哈佛商学院等机构拥有深厚的执行教育背景。在三大洲经历了金融危机、政治过渡和经济重组的谈判中拥有经证实的记录。几十年来在实际波动下运作，在该多边组织、开发银行和国家部委的业务中构建了超过 2 万亿美元的结构。\n\n自 2017 年以来，CCTAAL 一直以此巩固的制度基础运作。遍布三大洲的政府网络。直接接触部长、州长和国家决策者。拥有国际有效裁决的商品仲裁院。符合 FCPA（美国）和 LGPD（巴西）的跨国合规。在机构保护下跨越不同监管制度的业务。\n\nCCTAAL 不指明道路。它一起穿越。"
         },
         "values": {
             "title": "机构支柱",
@@ -191,20 +195,20 @@
             "title": "公司治理",
             "subtitle": "在对外贸易、外交和农业综合企业拥有丰富经验的领导者。",
             "roles": {
-                "president": "总裁兼创始人",
+                "president": "主席兼创始人",
                 "director_ops": "运营与机构治理总干事",
-                "director_relations": "机构关系与政府联络总监",
+                "director_relations": "机构关系与政府联络主任",
                 "director_investments": "投资结构与合同安全总监",
-                "director_compliance": "合规、仲裁与冲突解决总监",
+                "director_compliance": "合规、仲裁与冲突解决主任",
                 "director_intl_relations": "国际机构关系总监"
             },
             "descs": {
-                "president": "拥有数十年巴西-中国贸易经验的远见卓识的领导者。",
-                "director_ops": "运营执行与合规。",
-                "director_relations": "与中央银行和各部委的联络。",
-                "director_investments": "外国直接投资 (FDI) 结构化与合同保障。",
-                "director_compliance": "仲裁、跨国合规与调解。",
-                "director_intl_relations": "与外国投资者的协调。"
+                "president": "拥有数十年巴西-中国贸易经验的远见卓识的领导者。巩固的政府网络，可直接接触亚洲、拉丁美洲和非洲的高层决策者。在三大洲与开发银行、主权基金和国家部委共同构建高密度跨国业务的数十年经验。拥有麻省理工学院 (MIT) 的双研究生学位。哈佛商学院的高管教育背景。",
+                "director_ops": "零容错的机构执行。针对跨越跨国监管体制的大规模资本的运营治理。在实际波动下屏蔽九位数业务的合规结构。",
+                "director_relations": "在巴西利亚建立了数十年的机构活动巩固网络。与巴西中央银行、各部委和州秘书处直接联络。促进 RDE-IED 并为高密度外国直接投资 (FDI) 业务在巴西监管环境中导航。",
+                "director_investments": "确保合同履行和资本受保护的治理。针对穿越多个司法管辖区的外国直接投资 (FDI) 的合同屏蔽。在监管不确定性和地缘政治波动下保护九位数资本的法律结构。",
+                "director_compliance": "涉及数十亿资金的的技术调解和冲突解决。专门从事大宗商品的仲裁庭，其裁决获得国际认可。符合《反海外腐败法》(FCPA/USA)、《通用数据保护法》(LGPD/Brazil) 和反腐败协议的跨国合规。",
+                "director_intl_relations": "外资与拉丁美洲规模机会之间的机构接口。与主权基金、家族办公室和全球金融机构的协调。在农业综合企业与先进技术融合处的高密度业务的跨国联络。"
             }
         },
         "compliance": {
@@ -229,17 +233,25 @@
         "stats": {
             "title": "结构性指标",
             "subtitle": "支撑农业综合企业与先进技术融合的大规模资本运营的宏观经济数据。",
-            "gdp": "预计 GDP (2024)",
-            "trillions": "11.8 万亿雷亚尔",
-            "growth": "2025年第一季度增长",
+            "gdp": "综合 GDP (2025)",
+            "gdp_value": "11.9 万亿雷亚尔",
+            "gdp_trend": "+2.9%",
+            "growth": "2025年第四季度增长",
+            "growth_value": "+1.8%",
             "driven_by": "受农业驱动",
-            "exports": "农业出口",
+            "exports": "农业出口 (2025)",
+            "exports_value": "US$ 182.0 亿",
             "of_total": "49% 占总出口",
             "share": "GDP 占比",
+            "share_value": "24.5%",
             "agribusiness": "农业综合企业",
             "positive": "积极",
             "record": "创纪录",
             "stable": "稳定"
+        },
+        "chart": {
+            "current_quote": "当前报价",
+            "pair": "大豆/USD"
         },
         "analysis": {
             "title": "不可复制的结构性优势",
@@ -269,7 +281,7 @@
         },
         "overview": {
             "title": "机构生态系统",
-            "text": "CCTAAL 为农业综合企业与先进技术融合的顶级运营构建机构治理结构。\n\n跨越大陆、长技术周期和不同监管制度的九位数资本无法通过传统的商业模式运作。它需要国家背书、系统性风险情报以及技术和生产能够长期保持相关性的永续生态系统。\n\n我们构建了一个环境，让双方（尖端技术提供商和大规模农业综合企业运营商）在同一机构保护伞下运作，受到同一跨国政府网络的保护，而无需单独承担交易对手风险。\n\n我们通过四大结构支柱运作：双边机构背书，确保双方同时受到保护；永续生态系统，保持投资在周期中的相关性；跨国顶级网络，直接接触州长和全球经济领导人；以及实时风险情报，以便在波动下做出明智决策。每项操作都在这个完整的系统内构建，而不是作为孤立的交易。"
+            "text": "CCTAAL 为农业综合企业与先进技术融合的顶级运营构建机构治理结构。\n\n跨越大陆、长技术周期和不同监管制度的九位数资本无法通过传统的商业模式运作。它需要国家背书、系统性风险情报以及技术和生产能够长期保持相关性的永续生态系统。\n\n大规模外国资本在巴西面临的主要挑战是法律不安全和监管复杂性。咨询公司指出了路径却不承担风险。双边协议保证了交易却没能构建持久性。汇率和价格波动之后仍然是未缓解的威胁。传统结构无法解决这个问题。\n\nCCTAAL 构建了一个环境，让双方在同一机构屏蔽下通过，受到同一跨国政府网络的保护，没有孤立的交易对手风险。尖端技术供应商和大规模农业综合企业运营商在同一国家背书下运作。\n\n该结构通过四个运营支柱消除了关键风险层。\n\n法律安全与冲突解决。专门从事大宗商品的仲裁庭，其裁决具有国际效力。调解和和解以快速解决争端。严格的尽职调查和了解您的合作伙伴 (KYC)：关于财务健康、诉讼历史、监管合规性的报告。符合 FCPA (美国) 和 LGPD (巴西) 的跨国合规。合同受尊重。争端通过技术手段解决。\n\n金融与运营风险缓解。由 CCTAAL 作为中立代理人操作的托管账户 (Escrow Account)。只有在满足所有合同条件（检验、装运、质量验证）后才向卖方放款。通过锁定转换率的锁定期进行外汇对冲，消除美元/雷亚尔波动。连接芝加哥商品交易所 (CME Group) 和巴西证券交易所 (B3) 的价格对冲，保护大宗商品未来价格。针对因破产或政治事件导致的未付款风险的出口信用保险。与拉丁美洲最大的大宗商品风险管理平台建立合作伙伴关系。\n\n质量保证与可追溯性。与 SGS 和 Intertek 合作进行的认证和装运前检验。在原产地对质量和数量进行独立验证。用于遵守贸易协定的原产地证书。卫星监控证明生产不涉及非法砍伐森林或土地冲突。ESG 审计验证工作条件和环境实践。保护声誉并允许进入高端市场的合规性。\n\n市场促进与进入巴西。支持向中央银行进行外国直接投资电子申报登记 (RDE-IED)，这是外国资本在巴西正规化的强制性要求。支持投资者签证以及在联邦税务局和商业委员会的注册。关于大宗商品市场、价格趋势、监管变化、作物预测的战略报告。精心策划的配对：通过 CCTAAL 预先资格审查的外国投资者与生产商和贸易商连接，最大限度地减少不合适合作伙伴的风险。\n\n每项操作都在这个完整的系统内构建。而不是作为孤立的交易。双边机构背书同时保护双方。永续生态系统使投资在各个周期保持相关性。跨国高层网络提供直接接触三大洲州长和经济领袖的通道。实时风险情报允许在波动下做出明智决策。\n\nCCTAAL 不指路。我们一起穿越。"
         },
         "pillars": {
             "title": "行动支柱",
